overflow on phone fix

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,9 @@
 #map {
   height: 250px; }
 
+@media (max-width: 576px) {
+  .overflow-hidden-phone {
+    overflow-x: hidden; } }
 .container-fluid.container-wider {
   padding: 0; }
 
@@ -210,8 +213,12 @@ header, footer {
   padding: 3rem 5.5rem !important; }
 
 .container-stripe-bottom {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem; }
+  padding-left: .5rem;
+  padding-right: .5rem; }
+  @media (min-width: 576px) {
+    .container-stripe-bottom {
+      padding-left: 2.5rem;
+      padding-right: 2.5rem; } }
   @media (min-width: 992px) {
     .container-stripe-bottom {
       padding-left: 5.5rem;
